Created dynamic UI based on weather service & fixed bower issues on prod
