# lib/server.js
@@ -42,9 +42,16 @@ server.route({
 
 // Route call for api docs
 server.route({
-    method: 'GET',
-    path:'/api-docs/{param*}',
-    handler: { directory: { path: "api" } }
+  method: 'GET',
+  path:'/api-docs/{param*}',
+  handler: { directory: { path: "api" } }
+})
+
+// Sends client which service type is being used
+server.route({
+  method: 'GET',
+  path:'/api/serviceType',
+  handler: api_getServiceType
 })
 
 // Route API calls to retrieve current weather data
@@ -64,8 +71,7 @@ server.route({
 // Route API calls to retrieve past date weather data
 server.route({
   method:  "GET",
-  path:    "/api/pastConditions"
-  ,
+  path:    "/api/pastConditions",
   handler: api_pastConditions
 })
 
@@ -80,6 +86,16 @@ console.log("server starting on: " + appEnv.url)
 server.start(function() {
   console.log("server started  on: " + appEnv.url)
 })
+
+//------------------------------------------------------------------------------
+// Reqest Handler for getting weather service type
+function api_getServiceType(request, reply) {
+  var serviceType = {
+    type: fullService
+  }
+  var serviceString = JSON.stringify(serviceType);
+  reply(serviceString);
+}
 
 //------------------------------------------------------------------------------
 // Reqest Handler for getting current weather data
@@ -230,7 +246,6 @@ function getWeatherService(appEnv) {
 
 // Returns a weather service object based on existing weather service
 function createWeatherService(serviceCreds) {
-  console.log(fullService);
   if (fullService) {
     var url    = serviceCreds.url;
     var apiKey = serviceCreds.apiKey;
